# Rust-React-CRUD-Web-App

./: .gitattributes  .gitignore
dakotadb/: .env  Cargo.toml  TODO
dakotadb/example/: auth_test.rs  parse_bool_test.rs  scratch.rs  show_students.rs  student_data_check.rs  switch_company_ids_students.rs  write_class.rs  write_classes_to_db.rs  write_data_from_csv.rs  write_instructors.rs  write_old_companies_to_db_part_1.rs  write_old_companies_to_db_part_2.rs  write_old_students_to_db.rs
dakotadb/example/backups/: extra_lib.rs
dakotadb/migrations/2022-03-05-163941_create_students/: up.sql
dakotadb/migrations/2022-03-14-210416_create_companies/: down.sql  up.sql
dakotadb/migrations/2022-03-18-142402_create_classes/: down.sql  up.sql
dakotadb/migrations/2022-03-20-193634_create_class_schedule/: down.sql  up.sql
dakotadb/migrations/2022-03-21-053715_create_instructors/: up.sql
dakotadb/migrations/2022-03-22-201147_drop_students_old_id/: down.sql  up.sql
dakotadb/migrations/2022-03-22-201602_drop_company_old_id/: down.sql  up.sql
dakotadb/migrations/2022-03-23-053815_create_student_class_table/: down.sql  up.sql
dakotadb/migrations/2022-03-30-231814_create_users/: up.sql
dakotadb/migrations/2022-04-24-105440_add_days_column_to_class_type/: down.sql  up.sql
dakotadb/src/: auth.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
seraphim/: package-lock.json  package.json
seraphim/src/app/: ClassEntryMain.tsx  ClassTable.tsx  StudentSearchModal.tsx  page.tsx
